# srsinst.cs580

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
srsinst/cs580/: __init__.py
srsinst/cs580/instruments/: components.py  cs580.py  keys.py
tests/: conftest.py  test_cs580.py
