
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srsinst.cs580"
description = "Instrument driver package for the CS580 Voltage Controlled Current Source from Stanford Research Systems"
requires-python = ">=3.7"
keywords = ["CS580", "SRS", "Stanford Research Systems", "current source"]
license = {text = "MIT license"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering"
]
dependencies = [
    "srsgui>=0.4.5",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "srsinst.cs580.__version__"}
